--- a/vision.properties
+++ b/vision.properties
@@ -1,2 +1,2 @@
 camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-processor: 
+ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
