refactor and get working

--- a/vision.properties
+++ b/vision.properties
@@ -1,2 +1,8 @@
-camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
+camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+networktable: org.bullbots.visionprocessing.NetworkDummy
+testmode: AUTO
+showimage: true
+
+#camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
+#networktable: org.bullbots.visionprocessing.FirstNetworkTable
