Add start of autonomous

--- a/vision.properties
+++ b/vision.properties
@@ -1,6 +1,8 @@
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
 camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
 networktable: org.bullbots.visionprocessing.NetworkDummy
+autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
+#testmode: AUTO
 testmode: AUTO
 showimage: true
 
