--- a/vision.properties
+++ b/vision.properties
@@ -3,7 +3,7 @@ camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
 networktable: org.bullbots.visionprocessing.NetworkDummy
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 #testmode: AUTO
-testmode: AUTO
+testmode: TELEOP
 showimage: true
 
 #camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
