--- a/vision.properties
+++ b/vision.properties
@@ -1,10 +1,13 @@
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
-camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-networktable: org.bullbots.visionprocessing.NetworkDummy
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 #testmode: AUTO
 testmode: TELEOP
 showimage: true
 
+#For testing..
+camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+networktable: org.bullbots.visionprocessing.NetworkDummy
+
+#For real..
 #camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
 #networktable: org.bullbots.visionprocessing.FirstNetworkTable
