add cascadeclassifier code.

--- a/vision.properties
+++ b/vision.properties
@@ -7,6 +7,8 @@ showimage: true
 #For testing..
 camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
 networktable: org.bullbots.visionprocessing.NetworkDummy
+#ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
+ballfinder: org.bullbots.visionprocessing.processor.impl.HaarCascadeBallFinder
 
 #For real..
 #camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
