format and clean up

--- a/vision.properties
+++ b/vision.properties
@@ -3,6 +3,7 @@ autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorI
 #testmode: AUTO
 testmode: TELEOP
 showimage: true
+video: 0
 
 #For testing..
 camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
