Tweak setup to allow external files...

--- a/vision.properties
+++ b/vision.properties
@@ -14,3 +14,5 @@ ballfinder: org.bullbots.visionprocessing.processor.impl.HaarCascadeBallFinder
 #For real..
 #camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
 #networktable: org.bullbots.visionprocessing.FirstNetworkTable
+
+haarcascade: training.xml
