Added Autonomous Code
+ Camera will now look for the reflective tape

--- a/vision.properties
+++ b/vision.properties
@@ -1,9 +1,9 @@
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
-#testmode: AUTO
-testmode: TELEOP
+testmode: AUTO
+#testmode: TELEOP
 showimage: true
-video: 0
+video: 1
 
 #For testing..
 camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
