--- a/vision.properties
+++ b/vision.properties
@@ -1,18 +1,18 @@
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 testmode: TELEOP
-#testmode: TELEOP
+#testmode: AUTO
 showimage: true
-video: 1
+video: 0
 
 #For testing..
-#camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-#networktable: org.bullbots.visionprocessing.NetworkDummy
+camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+networktable: org.bullbots.visionprocessing.NetworkDummy
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
 #ballfinder: org.bullbots.visionprocessing.processor.impl.HaarCascadeBallFinder
 
 #For real..
-camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
-networktable: org.bullbots.visionprocessing.FirstNetworkTable
+#camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
+#networktable: org.bullbots.visionprocessing.FirstNetworkTable
 
 haarcascade: training.xml
