support for two cameras... hopefully.

--- a/vision.properties
+++ b/vision.properties
@@ -1,18 +1,24 @@
-ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
-autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 testmode: TELEOP
 #testmode: AUTO
 showimage: true
-video: 0
+
 
 #For testing..
-camera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+ballCameraAddress: 0
+autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+autoCameraAddress: 0
+
+#Real
+#useSame=false
+#ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+#ballCameraAddress: http://10.18.91.11/mjpg/video.mjpg
+#autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+#autoCameraAddress: http://10.18.91.11/mjpg/video.mjpg
+
+
 networktable: org.bullbots.visionprocessing.NetworkDummy
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
-#ballfinder: org.bullbots.visionprocessing.processor.impl.HaarCascadeBallFinder
-
-#For real..
-#camera: org.bullbots.visionprocessing.camera.impl.AxisCamera
-#networktable: org.bullbots.visionprocessing.FirstNetworkTable
+autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 
 haarcascade: training.xml
