add red ball finder

--- a/vision.properties
+++ b/vision.properties
@@ -1,22 +1,26 @@
-#testmode: TELEOP
-testmode: AUTO
+testmode: TELEOP
+#testmode: AUTO
 showimage: true
+color: red
 
 
 #For testing..
-#ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-#ballCameraAddress: 0
-#autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-#autoCameraAddress: 0
+ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+ballCameraAddress: 0
+autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+autoCameraAddress: 0
+networktable: org.bullbots.visionprocessing.NetworkDummy
 
 #Real
-ballCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
-ballCameraAddress: http://10.18.91.11/mjpg/video.mjpg
-autoCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
-autoCameraAddress: http://10.18.91.12/mjpg/video.mjpg
+#ballCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
+#ballCameraAddress: http://10.18.91.11/mjpg/video.mjpg
+#autoCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
+#autoCameraAddress: http://10.18.91.12/mjpg/video.mjpg
+#networktable: org.bullbots.visionprocessing.FirstNetworkTable
 
 
-networktable: org.bullbots.visionprocessing.NetworkDummy
+
+#ballfinder: org.bullbots.visionprocessing.processor.impl.MSERBallFinder
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 
