--- a/vision.properties
+++ b/vision.properties
@@ -6,9 +6,9 @@ color: red
 
 #For testing..
 ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-ballCameraAddress: 0
+ballCameraAddress: 1
 autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-autoCameraAddress: 0
+autoCameraAddress: 1
 networktable: org.bullbots.visionprocessing.NetworkDummy
 
 #Real
@@ -22,6 +22,7 @@ networktable: org.bullbots.visionprocessing.NetworkDummy
 
 #ballfinder: org.bullbots.visionprocessing.processor.impl.MSERBallFinder
 ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
+ballfinder: org.bullbots.visionprocessing.processor.impl.BlueBallFinder
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 
 haarcascade: training.xml
