--- a/vision.properties
+++ b/vision.properties
@@ -1,27 +1,27 @@
 testmode: TELEOP
 #testmode: AUTO
 showimage: true
-color: red
+#saveimages: true
 
 
 #For testing..
-ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-ballCameraAddress: 1
-autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
-autoCameraAddress: 1
-networktable: org.bullbots.visionprocessing.NetworkDummy
+#ballCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+#ballCameraAddress: 1
+#autoCamera: org.bullbots.visionprocessing.camera.impl.VideoCamera
+#autoCameraAddress: 1
+#networktable: org.bullbots.visionprocessing.NetworkDummy
 
 #Real
-#ballCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
-#ballCameraAddress: http://10.18.91.11/mjpg/video.mjpg
-#autoCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
-#autoCameraAddress: http://10.18.91.12/mjpg/video.mjpg
-#networktable: org.bullbots.visionprocessing.FirstNetworkTable
+ballCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
+ballCameraAddress: http://10.18.91.11/mjpg/video.mjpg
+autoCamera: org.bullbots.visionprocessing.camera.impl.AxisCamera
+autoCameraAddress: http://10.18.91.12/mjpg/video.mjpg
+networktable: org.bullbots.visionprocessing.FirstNetworkTable
 
 
 
 #ballfinder: org.bullbots.visionprocessing.processor.impl.MSERBallFinder
-ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
+#ballfinder: org.bullbots.visionprocessing.processor.impl.RedBallFinder
 ballfinder: org.bullbots.visionprocessing.processor.impl.BlueBallFinder
 autoprocessor: org.bullbots.visionprocessing.processor.impl.AutonomousProcessorImpl
 
